fix: fixed alignment issue and overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+    background-color: rgb(35, 35, 35);
+}
+*{
+    color: wheat;
+}
